[package]
name = "lambda-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
lambda_runtime = "0.5"
lambda_http = "0.5"

hyper = "0.14"

tokio = { version = "1.0", features = ["rt"] }

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors", "compression-gzip"] }
tower-service = "0.3"